--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <%= render :partial => "shared/tree", :locals => {:object => @accession, :tree => @accession_tree, :child_jsonmodel_type => "resource"} %>
+    <%= render :partial => "shared/tree", :locals => {:tree => @accession_tree} %>
   </div>
 </div>
 
