--- a/frontend/app/views/resources/edit.html.erb
+++ b/frontend/app/views/resources/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <%= render :partial => "shared/tree", :locals => {:object => @resource, :tree => @resource_tree, :child_jsonmodel_type => "archival_object"} %>
+    <%= render :partial => "shared/tree", :locals => {:tree => @resource_tree} %>
   </div>
 </div>
 
