--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,9 +1,3 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index), link_to(@accession.title, :controller => :accessions, :action => :show, :id => @accession.id), "Edit"]} %>
 
-<div class="row-fluid">
-  <div class="span12">
-    <%= render :partial => "shared/tree", :locals => {:tree => @accession_tree} %>
-  </div>
-</div>
-
-<div id="object_container"></div>
+<%= render :partial => "accessions/edit_inline" %>
