--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -166,6 +166,18 @@ section h3 {
   bottom: 0px;
 }
 
+.as-nav-list {
+  .btn-submit-group {
+    width: 100%;
+    button:first-child {
+      width: 80%;
+    }
+    #createPlusOne {
+      width: 20%;
+    }
+  }
+}
+
 /* Desktop large
 ------------------------- */
 @media (min-width: 1200px) {
