--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -28,9 +28,16 @@
 
 
     <% if not controller.action_name === "show" %>
-      <li class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Archival Object</button>
-      </li>
+      <div class="form-actions">
+        <% if controller.action_name === "new" or controller.action_name === "create" %>
+          <div class="btn-group btn-submit-group">
+            <button type="submit" class="btn btn-primary">Save Archival Object</button>
+            <button type="button" id="createPlusOne" class="btn btn-primary">+1</button>
+          </div>
+        <% else %>
+          <button type="submit" class="btn btn-primary">Save Archival Object</button>
+        <% end %>
+      </div>
     <% end %>
   </ul>
 </div>
