--- a/frontend/app/views/resources/show.html.erb
+++ b/frontend/app/views/resources/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Resources", :controller => :resources, :action => :index), @resource.title]} %>
 <div class="row-fluid">
   <div class="span12">
-    <%= render :partial => "shared/tree" %>
+    <%= render :partial => "shared/tree", :locals => {:read_only => true} %>
   </div>
 </div>
 
