- Introduce ready_only_view to the form helper to assist in rendering label/value pairs for a jsonmodel hash. - Fix error when adding External Document to an agent (it was scoped to a repo but needed to be global) + test

--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents", :section_id => "agent_external_documents_"} %>
 
 </fieldset>
 
