--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -11,7 +11,7 @@
     <% end %>
 
     <% if not controller.action_name === "show" or @agent.external_documents.length > 0 %>
-      <li><a href="#<%= form.id_for("external_documents") %>">External Documents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#agent_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
