--- a/frontend/app/views/deaccessions/_show.html.erb
+++ b/frontend/app/views/deaccessions/_show.html.erb
@@ -16,7 +16,7 @@
               <span class="icon-chevron-down"></span>
             </div>
             <div class="span1">
-              <% if deaccession["whole_or_part"] %>Whole<% else %>Part<% end %>
+              <% if deaccession["whole_part"] %>Whole<% else %>Part<% end %>
             </div>
             <div class="span3">
               <% if deaccession["date"]['date_type'] === "expression" %>
@@ -37,16 +37,7 @@
         </div>
         <div id="deaccession_<%= index %>" class="accordion-body collapse">
           <div class="subrecord-form-container">
-            <% deaccession.reject{|k,v| ["lock_version", "date", "extents", "jsonmodel_type"].include?(k)}.each do |k, v| %>
-              <div class="row-fluid label-and-value">
-                <div class="span3 offset1" ><%= I18n.t("deaccession.#{k}") %></div>
-                <% if JSONModel(:deaccession).schema["properties"][k]["enum"] %>
-                  <div class="span8"><%= I18n.t("deaccession.#{k}_#{v}") %></div>
-                <% else  %>
-                  <div class="span8"><%= v %></div>
-                <% end %>
-              </div>
-            <% end %>
+            <%= read_only_view(deaccession.to_hash) %>
             <%= render :partial => "dates/show", :locals => { :dates =>[deaccession["date"]], :section_id => "deaccession_#{index}_date_", :section_title => "Deaccession Date" } %>
             <% if deaccession["extents"].length > 0 %>
               <%= render :partial => "extents/show", :locals => { :extents => deaccession["extents"], :section_id => "deaccession_#{index}_extents_" } %>
