--- a/frontend/app/views/container_locations/_show.html.erb
+++ b/frontend/app/views/container_locations/_show.html.erb
@@ -3,10 +3,10 @@
 
   <div class="container-subrecord">
     <% container_locations.each_with_index do |container_location, index| %>
-      <%= read_only_view(container_location.to_hash) %>
+      <%= read_only_view(container_location.to_hash, :label_css => "span4") %>
       <% if container_location["location"] %>
         <div class="row-fluid label-and-value">
-          <div class="span3 offset1" ><%= I18n.t("container_location.location") %></div>
+          <div class="span4" ><%= I18n.t("container_location.location") %></div>
           <div class="span8">
             <div class="token"><%= Location.from_hash(container_location["resolved"]["location"]).display_string %></div>
           </div>
