minor yard updates, some importer cleanup, fix subject linking

--- a/_yard/API.erb
+++ b/_yard/API.erb
@@ -1,5 +1,5 @@
 # ArchivesSpace REST API
-As of <%= @time.inspect %> the following REST endpoints exist:
+As of <%= @time.inspect %> the following REST endpoints exist in the master branch of the development repository:
 
 <% @endpoints.each do | e | %>
 	
