--- a/frontend/app/views/digital_objects/index.html.erb
+++ b/frontend/app/views/digital_objects/index.html.erb
@@ -21,7 +21,7 @@
            </tr>
          </thead>
          <tbody>
-          <% @digital_objects.each do |digital_object| %>
+          <% @digital_objects['results'].each do |digital_object| %>
              <tr>
               <td><%= digital_object.title %></td>
               <td>
