--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -21,7 +21,7 @@
            </tr>
          </thead>
          <tbody>
-          <% @resources.each do |resource| %>
+          <% @resources['results'].each do |resource| %>
              <tr>
               <td><%= resource.title %></td>
               <td>
