--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -21,7 +21,7 @@
            </tr>
          </thead>
          <tbody>
-          <% @subjects.each do |subject| %>
+          <% @subjects['results'].each do |subject| %>
              <tr>
               <td><%= subject.display_string %></td>
               <td>
