Introduce CodeMirror to markup mixed content fields on Notes records

--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -7,3 +7,5 @@
 @import "archivesspace/form";
 @import "archivesspace/tree";
 @import "datepicker";
+@import "../../codemirror/codemirror.css";
+@import "../../codemirror/util/simple-hint.css";
