--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -362,3 +362,38 @@ section h3 {
     }
   }
 }
+
+.CodeMirror {
+  #font > .shorthand(@baseFontSize,normal,@baseLineHeight);
+  margin-bottom: 9px;
+  font-size: @baseFontSize;
+  line-height: @baseLineHeight;
+  color: @gray;
+  .border-radius(@inputBorderRadius);
+  background-color: @inputBackground;
+  border: 1px solid @inputBorder;
+  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  overflow: visible;
+  padding-bottom: @baseLineHeight;
+
+  .CodeMirror-scroll {
+    height: auto;
+    overflow: visible;
+  }
+
+  .mixed-content-wrapper {
+    font-size: 0.9em;
+    z-index: 10;
+    min-width: 336px;
+    display: none;
+    .arrow {
+      left: 25%;
+    }
+  }
+}
+
+.CodeMirror-completions {
+  .box-shadow(0 5px 10px rgba(0,0,0,.2));
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0,0,0,.2);
+}
