--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -116,3 +116,21 @@
      </div>
    </div>
 --></div>
+
+<div id="mixed_content_wrap_action_template"><!--
+  <div class="mixed-content-wrapper popover bottom">
+    <div class="arrow"></div>
+    <div class="popover-inner">
+      <div class="popover-content">
+        <label>Wrap with:
+          <select class="mixed-content-wrap-action">
+            <option></option>
+            {for tag in tags}
+              <option>${tag.tag}</option>
+            {/for}
+          </select>
+        </label>
+      </div>
+    </div>
+  </div>
+--></div>
