Add pagination partial to all browse index pages (except for agents)

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -178,3 +178,11 @@ h2 > .label {
 .typeahead.dropdown-menu {
   z-index: 1099;
 }
+
+.pagination {
+  margin: 0;
+}
+
+.table {
+  margin-bottom: 5px;
+}
