--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </div>
       <h2>Accessions</h2>
-      <% if @accessions.length > 0 %>
+      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
@@ -21,7 +21,7 @@
              </tr>
            </thead>
            <tbody>
-              <% @accessions['results'].each do |accession| %>
+              <% @search_data['results'].each do |accession| %>
               <tr>
                <td>
                 <% if accession.suppressed %><span class="label label-info">Suppressed</span><% end %>
@@ -41,6 +41,7 @@
              <% end %>
            </tbody>
          </table>
+         <%= render :partial => "shared/pagination" %>
       <% else %>
          <p class="alert alert-info">
             There are currently no accessions in this, <strong><%= session[:repo] %></strong>, repository.
