--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -12,7 +12,7 @@
 
       <h2>Resources</h2>
 
-      <% if not @resources.blank? %>
+     <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
        <table class="table table-striped table-bordered table-condensed">
          <thead>
            <tr>
@@ -21,7 +21,7 @@
            </tr>
          </thead>
          <tbody>
-          <% @resources['results'].each do |resource| %>
+          <% @search_data['results'].each do |resource| %>
              <tr>
               <td><%= resource.title %></td>
               <td>
@@ -36,6 +36,7 @@
           <% end %>
          </tbody>
        </table>
+       <%= render :partial => "shared/pagination" %>
       <% else %>
          <p class="alert alert-info">
             There are currently no Resources in this, <strong><%= session[:repo] %></strong>, repository.
