--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -12,7 +12,7 @@
 
       <h2>Subjects</h2>
 
-      <% if not @subjects.blank? %>
+     <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
        <table class="table table-striped table-bordered table-condensed">
          <thead>
            <tr>
@@ -21,7 +21,7 @@
            </tr>
          </thead>
          <tbody>
-          <% @subjects['results'].each do |subject| %>
+          <% @search_data['results'].each do |subject| %>
              <tr>
               <td><%= subject.display_string %></td>
               <td>
@@ -33,6 +33,7 @@
           <% end %>
          </tbody>
        </table>
+       <%= render :partial => "shared/pagination" %>
       <% else %>
          <p class="alert alert-info">
             No Subjects.
