Add toolbar actions to move a node (to complement d'n'd)

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -91,6 +91,12 @@
 
   #archives_tree_toolbar {
     padding: 0 20px;
+
+    .btn-group.move-node-menu .dropdown-submenu ul {
+      max-width: 400px;
+      max-height: 200px;
+      overflow: auto;
+    }
   }
 
   .ui-resizable-handle.ui-resizable-s {
